Updated page TechDraw RadiusDimension/fr

--- a/wiki/fr/TechDraw_RadiusDimension.html
+++ b/wiki/fr/TechDraw_RadiusDimension.html
@@ -78,10 +78,8 @@
 </p><p><span id="Change_properties"></span>
 </p>
 <h3><span id="Changer_les_propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Changer_les_propri&eacute;t&eacute;s">Changer les propri&eacute;t&eacute;s</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>. Cela ouvrira la <a href="../fr/TechDraw_LengthDimension.html#Fen%C3%AAtre_de_dialogue_Cote" title="TechDraw LengthDimension/fr">fen&ecirc;tre de dialogue Cote</a>.
+<p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Cela ouvrira la <a href="../fr/TechDraw_LengthDimension.html#Panneau_des_t%C3%A2ches_de_Cote" title="TechDraw LengthDimension/fr">panneau des t&acirc;ches de Cote</a>.
 </p>
-</div>
 <h2><span class="mw-headline" id="Limitations">Limitations</span></h2>
 <p>Les objets Cote sont vuln&eacute;rables au "<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;mes de nommage topologique</a>". Voir <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a>
 </p><p><span id="Notes"></span>
@@ -153,13 +151,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119200911
+Cached time: 20260119200950
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.134 seconds
-Preprocessor visited node count: 436/1000000
+CPU time usage: 0.092 seconds
+Real time usage: 0.168 seconds
+Preprocessor visited node count: 435/1000000
 Post&#8208;expand include size: 26161/2097152 bytes
 Template argument size: 10197/2097152 bytes
 Highest expansion depth: 6/100
@@ -169,19 +167,19 @@ Unstrip post&#8208;expand size: 3073/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.527      1 -total
- 18.80%    7.054      1 Template:TechDraw_Tools_navi/fr
- 15.06%    5.651      1 Template:Value
- 12.99%    4.873      2 Template:Navigation_menu_2
- 12.43%    4.664      1 Template:Userdocnavi/fr
-  7.64%    2.867      1 Template:Code
-  7.39%    2.775      1 Template:Version/fr
-  7.24%    2.716      1 Template:GuiCommand/fr
-  6.63%    2.487      1 Template:Incode
-  6.47%    2.429      1 Template:Caption
+100.00%   46.942      1 -total
+ 15.10%    7.088      1 Template:Userdocnavi/fr
+ 14.65%    6.875      1 Template:TechDraw_Tools_navi/fr
+ 12.16%    5.707      1 Template:Value
+ 10.36%    4.865      1 Template:GuiCommand/fr
+  9.67%    4.541      2 Template:Navigation_menu_2
+  8.46%    3.970      2 Template:Docnav/fr
+  8.18%    3.841      1 Template:Code
+  7.14%    3.351      1 Template:Caption
+  7.05%    3.311      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87717-0!canonical and timestamp 20260119200911 and revision id 1741130. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87717-0!canonical and timestamp 20260119200950 and revision id 1741132. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
