--- a/wiki/fr/TechDraw_RadiusDimension.html
+++ b/wiki/fr/TechDraw_RadiusDimension.html
@@ -81,7 +81,7 @@
 <p>Pour modifier les propri&eacute;t&eacute;s d'un objet dimension, double-cliquez dessus dans le dessin ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Cela ouvrira la <a href="../fr/TechDraw_LengthDimension.html#Panneau_des_t%C3%A2ches_de_Cote" title="TechDraw LengthDimension/fr">panneau des t&acirc;ches de Cote</a>.
 </p>
 <h2><span class="mw-headline" id="Limitations">Limitations</span></h2>
-<p>Les objets Cote sont vuln&eacute;rables au "<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;mes de nommage topologique</a>". Voir <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a>
+<p>Les objets Dimension sont vuln&eacute;rables au &laquo;&nbsp;<a href="../fr/Topological_naming_problem.html" title="Topological naming problem/fr">probl&egrave;mes de nommage topologique</a>&nbsp;&raquo;. Voir <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">TechDraw Cote de longueur</a>
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -151,12 +151,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119200950
+Cached time: 20260119201106
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.168 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.277 seconds
 Preprocessor visited node count: 435/1000000
 Post&#8208;expand include size: 26161/2097152 bytes
 Template argument size: 10197/2097152 bytes
@@ -167,19 +167,19 @@ Unstrip post&#8208;expand size: 3073/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.942      1 -total
- 15.10%    7.088      1 Template:Userdocnavi/fr
- 14.65%    6.875      1 Template:TechDraw_Tools_navi/fr
- 12.16%    5.707      1 Template:Value
- 10.36%    4.865      1 Template:GuiCommand/fr
-  9.67%    4.541      2 Template:Navigation_menu_2
-  8.46%    3.970      2 Template:Docnav/fr
-  8.18%    3.841      1 Template:Code
-  7.14%    3.351      1 Template:Caption
-  7.05%    3.311      1 Template:VersionMinus/fr
+100.00%   57.384      1 -total
+ 20.96%   12.025      1 Template:TechDraw_Tools_navi/fr
+ 15.15%    8.693      1 Template:Userdocnavi/fr
+  9.93%    5.697      1 Template:Value
+  9.58%    5.500      2 Template:Navigation_menu_2
+  9.28%    5.327      1 Template:Caption
+  8.59%    4.930      1 Template:Code
+  8.03%    4.606      1 Template:GuiCommand/fr
+  7.40%    4.245      2 Template:Docnav/fr
+  5.25%    3.011      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87717-0!canonical and timestamp 20260119200950 and revision id 1741132. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87717-0!canonical and timestamp 20260119201106 and revision id 1741134. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
