--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -163,13 +163,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119190128
+Cached time: 20260119201630
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.189 seconds
-Preprocessor visited node count: 251/1000000
+CPU time usage: 0.076 seconds
+Real time usage: 0.200 seconds
+Preprocessor visited node count: 252/1000000
 Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
 Highest expansion depth: 4/100
@@ -179,16 +179,16 @@ Unstrip post&#8208;expand size: 3298/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.093      1 -total
- 23.56%    2.142      4 Template:Code
- 16.36%    1.488      1 Template:TOCright
- 13.02%    1.184      5 Template:Incode
- 12.23%    1.112      3 Template:FileName
- 11.90%    1.082      4 Template:MenuCommand
- 10.72%    0.975      3 Template:Button
+100.00%   23.210      1 -total
+ 31.89%    7.401      4 Template:Code
+ 20.32%    4.716      4 Template:MenuCommand
+ 16.97%    3.938      1 Template:TOCright
+  9.24%    2.144      3 Template:FileName
+  6.85%    1.590      3 Template:Button
+  5.86%    1.359      5 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260119190128 and revision id 1741094. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260119201636 and revision id 1741141. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
