Updated page TechDraw AngleDimension/fr

--- a/wiki/fr/TechDraw_AngleDimension.html
+++ b/wiki/fr/TechDraw_AngleDimension.html
@@ -65,9 +65,9 @@
 <ol><li>S&eacute;lectionnez deux ar&ecirc;tes droites. La g&eacute;om&eacute;trie peut &ecirc;tre s&eacute;lectionn&eacute;e dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou dans le dessin.</li>
 <li>Si vous avez s&eacute;lectionn&eacute; la g&eacute;om&eacute;trie dans la vue 3D&nbsp;: ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote angulaire</b> du menu d&eacute;roulant.</li>
-<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une cote angulaire</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote angulaire</b> du menu.</li></ul></li>
+<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils pour les cotes</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote angulaire</b> du menu d&eacute;roulant.</li>
+<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote angulaire</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AngleDimension.svg&amp;filetimestamp=20241126214050&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote angulaire</b> du menu.</li></ul></li>
 <li>Une cote est ajout&eacute;e &agrave; la vue.</li>
 <li>La cote peut &ecirc;tre d&eacute;plac&eacute;e jusqu'&agrave; la position souhait&eacute;e.</li>
 <li>Si n&eacute;cessaire, ajoutez des tol&eacute;rances comme d&eacute;crit sur <a href="../fr/TechDraw_Geometric_dimensioning_and_tolerancing.html#Tol%C3%A9rances" title="TechDraw Geometric dimensioning and tolerancing/fr">cette page</a>.</li></ol>
@@ -137,15 +137,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119201401
+Cached time: 20260119201844
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.324 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.135 seconds
 Preprocessor visited node count: 418/1000000
-Post&#8208;expand include size: 26158/2097152 bytes
-Template argument size: 10106/2097152 bytes
+Post&#8208;expand include size: 26122/2097152 bytes
+Template argument size: 10070/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -153,19 +153,19 @@ Unstrip post&#8208;expand size: 1990/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   97.792      1 -total
- 20.64%   20.189      1 Template:TechDraw_Tools_navi/fr
- 15.91%   15.562      1 Template:Value
- 15.28%   14.945      2 Template:Navigation_menu_2
- 10.56%   10.331      1 Template:Version/fr
-  9.53%    9.315      1 Template:GuiCommand/fr
-  8.32%    8.141      1 Template:Incode
-  7.46%    7.297      1 Template:Userdocnavi/fr
-  7.23%    7.074      1 Template:VersionMinus/fr
-  7.08%    6.924      2 Template:Button
+100.00%   31.194      1 -total
+ 17.85%    5.568      1 Template:GuiCommand/fr
+ 15.99%    4.988      1 Template:TechDraw_Tools_navi/fr
+ 13.85%    4.319      2 Template:Navigation_menu_2
+ 12.67%    3.951      1 Template:Value
+ 10.08%    3.145      2 Template:Docnav/fr
+  9.49%    2.959      1 Template:Userdocnavi/fr
+  7.06%    2.202      1 Template:Version/fr
+  6.58%    2.053      1 Template:Caption
+  6.46%    2.015      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87741-0!canonical and timestamp 20260119201400 and revision id 1741138. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87741-0!canonical and timestamp 20260119201843 and revision id 1741145. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
