Updated page TechDraw 3PtAngleDimension/fr

--- a/wiki/fr/TechDraw_3PtAngleDimension.html
+++ b/wiki/fr/TechDraw_3PtAngleDimension.html
@@ -65,7 +65,7 @@
 <li>Si vous avez s&eacute;lectionn&eacute; la g&eacute;om&eacute;trie dans la vue 3D&nbsp;: ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils pour les cotes</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_3PtAngleDimension.svg&amp;filetimestamp=20240706142358&amp;.html" class="mw-file-description"><img src="../File/TechDraw_3PtAngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote angulaire par 3 points</b> du menu d&eacute;roulant.</li>
-<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_3PtAngleDimension.svg&amp;filetimestamp=20240706142358&amp;.html" class="mw-file-description"><img src="../File/TechDraw_3PtAngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote angulaire angulaire par 3 points</a></span>.</li>
+<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_3PtAngleDimension.svg&amp;filetimestamp=20240706142358&amp;.html" class="mw-file-description"><img src="../File/TechDraw_3PtAngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote angulaire par 3 points</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_3PtAngleDimension.svg&amp;filetimestamp=20240706142358&amp;.html" class="mw-file-description"><img src="../File/TechDraw_3PtAngleDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote angulaire par 3 points</b> du menu.</li></ul></li>
 <li>Une cote est ajout&eacute;e &agrave; la vue.</li>
 <li>La cote peut &ecirc;tre d&eacute;plac&eacute;e jusqu'&agrave; la position souhait&eacute;e.</li>
@@ -136,15 +136,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119202729
+Cached time: 20260119202802
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.144 seconds
+CPU time usage: 0.113 seconds
+Real time usage: 0.174 seconds
 Preprocessor visited node count: 421/1000000
-Post&#8208;expand include size: 26057/2097152 bytes
-Template argument size: 10057/2097152 bytes
+Post&#8208;expand include size: 26047/2097152 bytes
+Template argument size: 10047/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -152,19 +152,19 @@ Unstrip post&#8208;expand size: 1896/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.097      1 -total
- 23.05%    7.167      1 Template:TechDraw_Tools_navi/fr
- 17.88%    5.559      2 Template:Navigation_menu_2
- 13.96%    4.342      1 Template:Userdocnavi/fr
-  9.32%    2.899      3 Template:MenuCommand
-  8.26%    2.570      1 Template:VersionMinus/fr
-  8.19%    2.547      2 Template:Docnav/fr
-  8.00%    2.489      1 Template:Value
-  7.72%    2.401      1 Template:GuiCommand/fr
-  7.12%    2.215      1 Template:Version/fr
+100.00%   44.108      1 -total
+ 21.75%    9.592      1 Template:TechDraw_Tools_navi/fr
+ 16.65%    7.344      2 Template:Navigation_menu_2
+ 15.56%    6.864      1 Template:GuiCommand/fr
+ 14.98%    6.609      1 Template:Caption
+ 12.36%    5.452      1 Template:Userdocnavi/fr
+  7.83%    3.455      2 Template:Docnav/fr
+  6.46%    2.849      1 Template:Value
+  6.14%    2.706      1 Template:Version/fr
+  5.05%    2.226      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:120518-0!canonical and timestamp 20260119202728 and revision id 1741149. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:120518-0!canonical and timestamp 20260119202802 and revision id 1741151. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
