Updated page TechDraw AreaDimension/fr

--- a/wiki/fr/TechDraw_AreaDimension.html
+++ b/wiki/fr/TechDraw_AreaDimension.html
@@ -64,9 +64,9 @@
 <ol><li>S&eacute;lectionnez une face. La g&eacute;om&eacute;trie peut &ecirc;tre s&eacute;lectionn&eacute;e dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou dans le dessin.</li>
 <li>Si vous avez s&eacute;lectionn&eacute; la g&eacute;om&eacute;trie dans la vue 3D&nbsp;: ajoutez la bonne vue TechDraw &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Si la <a href="../fr/TechDraw_Preferences.html#Cotes/fr" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute; sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite de l'outil <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_AreaDimension.svg&amp;filetimestamp=20240707213711&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote de surface</b> dans le menu d&eacute;roulant.</li>
-<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_AreaDimension.svg&amp;filetimestamp=20240707213711&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><a class="mw-selflink selflink">Ins&eacute;rer une cote de surface</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AreaDimension.svg&amp;filetimestamp=20240707213711&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote de surface</b> du menu.</li></ul></li>
+<ul><li>Si la <a href="../fr/TechDraw_Preferences.html#Cotes/fr" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils pour les cotes</b> est r&eacute;gl&eacute; sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite de l'outil <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_AreaDimension.svg&amp;filetimestamp=20240707213711&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de surface</b> dans le menu d&eacute;roulant.</li>
+<li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_AreaDimension.svg&amp;filetimestamp=20240707213711&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><a class="mw-selflink selflink">Cote de surface</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_AreaDimension.svg&amp;filetimestamp=20240707213711&amp;.html" class="mw-file-description"><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de surface</b> du menu.</li></ul></li>
 <li>Une cote est ajout&eacute;e &agrave; la vue.</li>
 <li>La cote peut &ecirc;tre d&eacute;plac&eacute;e jusqu'&agrave; la position souhait&eacute;e.</li>
 <li>Si n&eacute;cessaire, ajoutez des tol&eacute;rances comme d&eacute;crit sur <a href="../fr/TechDraw_Geometric_dimensioning_and_tolerancing.html#Tol%C3%A9rances" title="TechDraw Geometric dimensioning and tolerancing/fr">cette page</a>.</li></ol>
@@ -122,15 +122,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119203452
+Cached time: 20260119203709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.446 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.543 seconds
 Preprocessor visited node count: 464/1000000
-Post&#8208;expand include size: 26807/2097152 bytes
-Template argument size: 10319/2097152 bytes
+Post&#8208;expand include size: 26771/2097152 bytes
+Template argument size: 10283/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -138,19 +138,19 @@ Unstrip post&#8208;expand size: 1413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  119.252      1 -total
- 18.53%   22.103      1 Template:TechDraw_Tools_navi/fr
- 14.32%   17.073      2 Template:PropertyData
- 13.73%   16.371      2 Template:Value
- 11.62%   13.856      2 Template:Navigation_menu_2
-  9.26%   11.046      2 Template:Button
-  9.14%   10.897      2 Template:Docnav/fr
-  7.81%    9.314      1 Template:GuiCommand/fr
-  7.80%    9.300      2 Template:Variable
-  7.29%    8.692      2 Template:Incode
+100.00%  155.367      1 -total
+ 19.37%   30.087      1 Template:TechDraw_Tools_navi/fr
+ 16.82%   26.127      1 Template:GuiCommand/fr
+ 16.62%   25.824      2 Template:Navigation_menu_2
+ 16.26%   25.263      2 Template:PropertyData
+ 14.19%   22.040      2 Template:Variable
+ 11.46%   17.812      1 Template:Userdocnavi/fr
+  8.72%   13.551      1 Template:VersionMinus/fr
+  8.55%   13.288      2 Template:Docnav/fr
+  5.53%    8.599      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:361168-0!canonical and timestamp 20260119203451 and revision id 1741153. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:361168-0!canonical and timestamp 20260119203709 and revision id 1741155. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
