--- a/wiki/fr/TechDraw_HorizontalExtentDimension.html
+++ b/wiki/fr/TechDraw_HorizontalExtentDimension.html
@@ -120,14 +120,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/fr">Longueur d'arc</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AreaDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_AreaDimension.html" title="TechDraw AreaDimension/fr">Cote de surface</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_VerticalExtentDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_VerticalExtentDimension.html" title="TechDraw VerticalExtentDimension/fr">Cote &eacute;tendue verticale</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -167,15 +165,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119203932
+Cached time: 20260119203950
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.310 seconds
-Preprocessor visited node count: 488/1000000
-Post&#8208;expand include size: 27329/2097152 bytes
-Template argument size: 11493/2097152 bytes
+CPU time usage: 0.098 seconds
+Real time usage: 0.283 seconds
+Preprocessor visited node count: 487/1000000
+Post&#8208;expand include size: 27266/2097152 bytes
+Template argument size: 11451/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -183,19 +181,19 @@ Unstrip post&#8208;expand size: 5159/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.297      1 -total
- 17.79%   16.238      1 Template:TechDraw_Tools_navi/fr
- 16.06%   14.662      2 Template:Navigation_menu_2
- 12.42%   11.336      2 Template:Button
- 12.37%   11.294      1 Template:PropertyData
-  9.83%    8.978      1 Template:Value
-  9.37%    8.558      1 Template:Userdocnavi/fr
-  8.49%    7.751      1 Template:Variable
-  6.70%    6.116      1 Template:VersionMinus/fr
-  5.79%    5.286      1 Template:Code
+100.00%   60.394      1 -total
+ 17.54%   10.595      1 Template:TechDraw_Tools_navi/fr
+ 14.88%    8.988      1 Template:Userdocnavi/fr
+ 14.06%    8.489      2 Template:Navigation_menu_2
+ 10.55%    6.369      1 Template:PropertyData
+  8.14%    4.918      1 Template:Value
+  7.73%    4.669      1 Template:GuiCommand/fr
+  6.62%    3.998      2 Template:Docnav/fr
+  6.39%    3.859      1 Template:Variable
+  6.34%    3.830      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161889-0!canonical and timestamp 20260119203932 and revision id 1741157. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161889-0!canonical and timestamp 20260119203950 and revision id 1741159. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
