Created page with "*[[File:PartDesign_Clone.svg|32px]] [[PartDesign_Clone|Vytvořit kopii]]: vytvoří klon vybraného těla."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -53,7 +53,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Zkontrolovat n&aacute;&#269;rt</a>: ov&#283;&#345;uje toleranci r&#367;zn&yacute;ch bod&#367; a upravuje je.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Part_CheckGeometry.svg&amp;filetimestamp=20240712183246&amp;.html" class="mw-file-description"><img src="../File/Part_CheckGeometry.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_CheckGeometry.html" title="Part CheckGeometry">Zkontrolovat geometrii</a>: Zkontroluje geometrii vybran&yacute;ch objekt&#367;, zda neobsahuje chyby.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_SubShapeBinder.svg&amp;filetimestamp=20191125191133&amp;.html" class="mw-file-description"><img src="../File/PartDesign_SubShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_SubShapeBinder.html" title="PartDesign SubShapeBinder">Po&#345;ada&#269; tvar&#367; podobjekt&#367;</a>: vytvo&#345;&iacute; tvarov&yacute; vazebn&iacute;k odkazuj&iacute;c&iacute; na geometrii jednoho nebo v&iacute;ce nad&#345;azen&yacute;ch objekt&#367;.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Clone.svg&amp;filetimestamp=20171227025636&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Clone.html" title="PartDesign Clone">Clone</a>: creates a clone of the selected body.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Clone.svg&amp;filetimestamp=20171227025636&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Clone.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Clone.html" title="PartDesign Clone">Vytvo&#345;it kopii</a>: vytvo&#345;&iacute; klon vybran&eacute;ho t&#283;la.</li></ul>
 <h3><span class="mw-headline" id="Part_Design_Modeling_Features_toolbar">Part Design Modeling Features toolbar</span></h3>
 <h4><span class="mw-headline" id="Additive_tools">Additive tools</span></h4>
 <p>These are tools for creating base features or adding material to an existing body.
@@ -183,12 +183,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205024
+Cached time: 20260119205105
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.227 seconds
-Real time usage: 0.838 seconds
+CPU time usage: 0.250 seconds
+Real time usage: 1.335 seconds
 Preprocessor visited node count: 462/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -199,18 +199,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.644      1 -total
- 35.84%   25.316      1 Template:Userdocnavi/cs
- 17.01%   12.020      5 Template:VersionPlus
- 16.20%   11.445      1 Template:PartDesign_Tools_navi/cs
- 14.63%   10.334      2 Template:Navigation_menu_2
-  8.09%    5.716      1 Template:TOCright
-  7.04%    4.973      2 Template:Docnav
-  5.15%    3.637      1 Template:Version
-  5.06%    3.572      1 Template:MenuCommand
+100.00%   74.268      1 -total
+ 29.41%   21.842      1 Template:PartDesign_Tools_navi/cs
+ 26.18%   19.447      2 Template:Navigation_menu_2
+ 25.77%   19.140      1 Template:Userdocnavi/cs
+ 12.87%    9.560      2 Template:Docnav
+  9.55%    7.093      1 Template:Version
+  8.32%    6.177      1 Template:TOCright
+  7.87%    5.848      5 Template:VersionPlus
+  4.93%    3.658      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205023 and revision id 1741185. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205104 and revision id 1741189. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
