Created page with "==== Aditivní nástroje ===="

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -57,7 +57,9 @@
 <p><span id="Part_Design_Modeling_Features_toolbar"></span>
 </p>
 <h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_Funkce_modelov.C3.A1n.C3.AD_n.C3.A1vrh.C5.AF_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_Funkce_modelov&aacute;n&iacute;_n&aacute;vrh&#367;_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta Funkce modelov&aacute;n&iacute; n&aacute;vrh&#367; d&iacute;l&#367;</span></h3>
-<h4><span class="mw-headline" id="Additive_tools">Additive tools</span></h4>
+<p><span id="Additive_tools"></span>
+</p>
+<h4><span id="Aditivn.C3.AD_n.C3.A1stroje"></span><span class="mw-headline" id="Aditivn&iacute;_n&aacute;stroje">Aditivn&iacute; n&aacute;stroje</span></h4>
 <p>These are tools for creating base features or adding material to an existing body.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad</a>: extrudes a solid from a selected sketch.</li></ul>
@@ -185,13 +187,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119205141
+Cached time: 20260119205221
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.225 seconds
-Real time usage: 0.685 seconds
-Preprocessor visited node count: 463/1000000
+CPU time usage: 0.260 seconds
+Real time usage: 0.583 seconds
+Preprocessor visited node count: 464/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -201,18 +203,18 @@ Unstrip post&#8208;expand size: 4424/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   93.689      1 -total
- 31.31%   29.333      1 Template:Userdocnavi/cs
- 26.75%   25.064      1 Template:Version
- 20.78%   19.469      2 Template:Navigation_menu_2
- 13.99%   13.105      1 Template:PartDesign_Tools_navi/cs
-  6.66%    6.236      1 Template:MenuCommand
-  4.35%    4.073      2 Template:Docnav
-  3.90%    3.653      1 Template:TOCright
-  3.69%    3.457      5 Template:VersionPlus
+100.00%   28.643      1 -total
+ 30.08%    8.616      1 Template:PartDesign_Tools_navi/cs
+ 26.69%    7.644      1 Template:Userdocnavi/cs
+ 14.07%    4.030      2 Template:Navigation_menu_2
+ 10.79%    3.091      2 Template:Docnav
+  7.93%    2.271      1 Template:MenuCommand
+  7.35%    2.106      1 Template:Version
+  7.15%    2.047      5 Template:VersionPlus
+  6.22%    1.783      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205140 and revision id 1741193. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119205221 and revision id 1741197. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
